fixed tooltip size and introduced spacing variables

--- a/styles/components/pop-menu/adde-tooltip/_variables.scss
+++ b/styles/components/pop-menu/adde-tooltip/_variables.scss
@@ -14,7 +14,7 @@ $adde-tooltip-fade-transition:               opacity 0.2s ease-in-out !default;
 $adde-tooltip-text-align:                    left !default;
 $adde-tooltip-text-color:                    $text-white !default;
 $adde-tooltip-font-weight:                   normal !default;
-$adde-tooltip-font-size:                     $font-size-smaller !default;
+$adde-tooltip-font-size:                     $core-font-size-5 !default;
 $adde-tooltip-line-height:                   $font-size-base !default;
 $adde-tooltip-font-family:                   $font-family-sans-serif !default;
 
