--- a/styles/core-variables/_typography.scss
+++ b/styles/core-variables/_typography.scss
@@ -61,7 +61,15 @@ $font-size-smaller:                 11px;
 $font-size-xsmall:                  10px;
 $font-size-smallest:                8px;
 
+// Spacings
+// -------------------------
 
+$spacing-xs: 4px;
+$spacing-s: 8px;
+$spacing-m: 16px;
+$spacing-l: 24px;
+$spacing-xl: 32px;
+$spacing-xxl: 40px;
 
 
 $core-font-size-1: 36px;
